--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
     <header>
       <div class="container-fluid bg-mello">
         <nav class="navbar navbar-toggleable-md navbar-inverse navbar-ngbootstrap">
-          <a class="navbar-brand" href="#/">
-            <img src="assets/img/logo.png" alt="mello labs" /> <strong class="logo">mello</strong> Labs
+          <a class="navbar-brand" [routerLink]="['/']" id="logo">
+            <span class="logo"></span>
           </a>
         </nav>
       </div>
